feat(timestamp-with-time-zone): add dbeaver time-zone configuration